back to working order

--- a/blogtest/templates/blog/submit.html
+++ b/blogtest/templates/blog/submit.html
@@ -11,7 +11,7 @@
         {#    create a private key encryption to prevent attacks#}
         {#    as_p stands for <p></p> as such it will put it into a new paragraph every line#}
             {{ form.as_p }}
-            <a href="{% url 'home' %}" class="btn btn-dark">Post</a>
+            <button class="btn btn-dark">Post</button>
         </form>
     </div>
     <script>
