basic of frontend

--- a/blogtest/templates/blog/home.html
+++ b/blogtest/templates/blog/home.html
@@ -4,30 +4,36 @@
 
 <h1>Dissertation Blog</h1>
 
-<select name="tag" form="filterForm">
-    {% for tag in courses %}
-        {% if tag.id == selected_tag %}
-            <option value={{ tag.id }} selected="selected">{{ tag.name }}</option>
-        {% else %}
-            <option value={{ tag.id }}>{{ tag.name }}</option>
-        {% endif %}
+    <div class="card-header" style="width: auto;">
+        Filter by Course:
+        <select name="tag" form="filterForm" class="form-select form-select-sm" style="width: fit-content">
+            {% for tag in courses %}
+                {% if tag.id == selected_tag %}
+                    <option value={{ tag.id }} selected="selected">{{ tag.name }}</option>
+                {% else %}
+                    <option value={{ tag.id }}>{{ tag.name }}</option>
+                {% endif %}
+            {% endfor %}
+        </select>
+        <form method="get" id="filterForm">
+            {% csrf_token %}
+            <button class="btn btn-dark">Filter</button>
+        </form>
+    </div>
 
+    {% for submission in submission_list %}
+        <div style="padding:1rem;">
+            <div class="card" style="width: auto;">
+                <div class="card-header">
+                    <h1>{{ submission.title }}</h1>
+                    {{ submission.author }} - {{ submission.pub_date }}
+                </div>
+                <div class="card-body">
+                    <p>{{ submission.content }}</p>
+                    <a href="{% url 'submission-detail' submission.pk %}" class="btn btn-dark">Continue Reading</a>
+                </div>
+            </div>
+        </div>
     {% endfor %}
-</select>
- <form method="get" id="filterForm">
-     {% csrf_token %}
-{#    <p>tag: <input type="text" value="tag" name=tag></p>#}
-    <button class="btn btn-dark">Filter</button>
- </form>
-
-{% for submission in submission_list %}
-
-    <h1>{{ submission.title }}</h1>
-    {{ submission.author }} - {{ submission.pub_date }}
-    <br/>
-    <p>{{ submission.content }}</p>
-    <a href="{% url 'submission-detail' submission.pk %}" class="btn btn-dark">Continue Reading</a>
-    <br/><br/>
-{% endfor %}
 
 {% endblock %}
