--- a/blogtest/templates/base.html
+++ b/blogtest/templates/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -15,13 +16,12 @@
     </title>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #327717;">
       <div class="container-fluid">
-        {% if user.is_authenticated %}
-            <a class="navbar-brand" href="{% url 'home' %}">DissBlog</a>
-        {% else %}
-            <a class="navbar-brand" href="{% url 'login' %}">DissBlog</a>
-        {% endif %}
+        <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static '1200px-University_of_Exeter_arms.svg.png' %}" alt="" width="50" height="50"  class="d-inline-block align-text-mid">
+            DissBlog
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,13 +37,18 @@
                   <li class="nav-item">
                       <a class="nav-link" href="{% url 'my_post' %}">My Submissions</a>
                   </li>
-              {% else %}
-                  <li class="nav-item">
-                      <a class="nav-link" href="{% url 'register' %}">Register</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="{% url 'login' %}">Login</a>
-                  </li>
+                  <form class="d-flex" method="POST" action="{% url 'search' %}">
+                      {% csrf_token %}
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query">
+                      <button class="btn btn-outline-dark" type="submit">Search</button>
+                  </form>
+{#              {% else %}#}
+{#                  <li class="nav-item">#}
+{#                      <a class="nav-link" href="{% url 'register' %}">Register</a>#}
+{#                  </li>#}
+{#                  <li class="nav-item">#}
+{#                      <a class="nav-link" href="{% url 'login' %}">Login</a>#}
+{#                  </li>#}
               {% endif %}
 
           </ul>
