--- a/blogtest/templates/blog/search.html
+++ b/blogtest/templates/blog/search.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+
+    <h1>Results for ....</h1>
+
+    {% for submission in submission_list %}
+
+
+        {% if user.id == submission.author.id %}
+            <h1>{{ submission.title }}</h1>
+            {{ submission.author }} - {{ submission.pub_date }}
+            <br/>
+            <p>{{ submission.content }}</p>
+            <a href="{% url 'submission-detail' submission.pk %}" class="btn btn-dark">Continue Reading</a>
+            <br/><br/>
+        {% endif %}
+    {% endfor %}
+
+{% endblock %}
