--- a/blogtest/templates/base.html
+++ b/blogtest/templates/base.html
@@ -42,6 +42,10 @@
                       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query">
                       <button class="btn btn-outline-dark" type="submit">Search</button>
                   </form>
+              {% else %}
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'login' %}">Login</a>
+                  </li>
               {% endif %}
 
           </ul>
